--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Snake-Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="zoom: 125%;">
     <div class="container">
         <div class="instructions"> Use your keyboard arrows to move , start by clicking any arrow button.
         </div>
